Dibuat menggunakan Colab

--- a/sd_learn_cgo_lab1.ipynb
+++ b/sd_learn_cgo_lab1.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Abyansyah/Abyansyah/blob/main/sd_learn_cgo_lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -39,28 +49,18 @@
       },
       "outputs": [],
       "source": [
-        "def zeroshot_prompt(context, question, book_titles):\n",
-        "    \"\"\"\n",
-        "    Creates a zero-shot prompt for the model, where the model acts as a seasoned programmer.\n",
-        "\n",
-        "    Parameters:\n",
-        "    - context: str, contextual information for the prompt\n",
-        "    - question: str, specific question or task for the model to perform\n",
-        "    - book_titles: list, list of book titles to include in the prompt\n",
-        "    Returns:\n",
-        "    - str, the formatted prompt\n",
-        "    \"\"\"\n",
-        "\n",
-        "    titles = \", \".join(book_titles)\n",
+        "def generate_code(context, question):\n",
         "    prompt = f\"\"\"\n",
-        "    You are an experienced programmer with 15 years of experience writing full-stack applications.\n",
-        "    Your task is to generate code for an application using the context provided in the task: {context}.\n",
-        "    Begin by creating components based on the user question: {question}.\n",
-        "    Include a description of elements provided in {titles}.\n",
-        "    Ensure that you generate only Python code for a Jupyter Notebook using ipywidgets UI components.\n",
-        "    Do not output anything but the code. The output code should not exceed 300 tokens.\n",
-        "    \"\"\"\n",
-        "    return prompt\n"
+        "As an expert full-stack developer with 15 years of experience specializing in Next.js and Supabase, your task is to generate production-ready code.\n",
+        "\n",
+        "Context: {context}\n",
+        "Task: {question}\n",
+        "\n",
+        "Generate only the code block required for the task. Do not add any explanations or introductory text.\n",
+        "\"\"\"\n",
+        "    result = model.invoke(prompt)\n",
+        "    print(f\"--- Hasil Kode dari IBM Granite ---\\n{result}\\n---------------------------------\")\n",
+        "    return result\n"
       ]
     },
     {
@@ -71,22 +71,22 @@
       },
       "outputs": [],
       "source": [
-        "def get_answer_using_zeroshot(context, question, book_titles):\n",
-        "    \"\"\"\n",
-        "    Generates the response from the model based on a zero-shot prompt.\n",
+        "context = \"Designing a SQL schema for a Job Tracker application using Supabase (PostgreSQL).\"\n",
+        "question = \"\"\"\n",
+        "Generate a SQL `CREATE TABLE` statement for a table named 'applications'. The table must include these columns:\n",
+        "- `id`: a unique UUID that is the primary key.\n",
+        "- `company_name`: text, cannot be empty.\n",
+        "- `position_applied`: text, cannot be empty.\n",
+        "- `status`: text, with a default value of 'Applied'.\n",
+        "- `application_date`: date, defaults to the current date.\n",
+        "- `interview_date`: timestamp with time zone, can be empty.\n",
+        "- `notes`: text, can be empty.\n",
+        "- `created_at`: timestamp with time zone, defaults to the current time.\n",
+        "- `user_id`: a UUID that references the auth.users table, cannot be empty. This is for user authentication.\n",
+        "\"\"\"\n",
         "\n",
-        "    Parameters:\n",
-        "    - context: str, contextual information for the prompt\n",
-        "    - question: str, specific question for the model to answer\n",
-        "    - book_titles: list, list of book titles to include in the prompt\n",
-        "\n",
-        "    Returns:\n",
-        "    - str, the generated result from the model\n",
-        "    \"\"\"\n",
-        "    prompt = zeroshot_prompt(context, question, book_titles)\n",
-        "    result = model.invoke(prompt)\n",
-        "\n",
-        "    return result"
+        "# Menjalankan prompt\n",
+        "sql_schema = generate_code(context, question)"
       ]
     },
     {
@@ -142,7 +142,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
