Dibuat menggunakan Colab

--- a/sd_learn_cgo_lab1.ipynb
+++ b/sd_learn_cgo_lab1.ipynb
@@ -129,62 +129,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "f-o9FFvbOQQJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6ec2094a-690f-49ae-fb67-3d5d0c4bf855"
+        "id": "f-o9FFvbOQQJ"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--- Hasil Model dari IBM Granite ---\n",
-            "\n",
-            "```prisma\n",
-            "model User {\n",
-            "  id        Int      @id @default(autoincrement())\n",
-            "  email     String   @unique\n",
-            "  applications Application[]\n",
-            "  statuses Status[]\n",
-            "  sources Source[]\n",
-            "  locations Location[]\n",
-            "}\n",
-            "\n",
-            "model Application {\n",
-            "  id          Int      @id @default(autoincrement())\n",
-            "  companyName String\n",
-            "  positionApplied String\n",
-            "  applicationDate DateTime @default(now())\n",
-            "  interviewDate DateTime\n",
-            "  notes       String?\n",
-            "  user        User     @relation(fields: [userId], references: [id])\n",
-            "  userId      Int\n",
-            "  status      Status   @relation(fields: [statusId], references: [id])\n",
-            "  statusId    Int\n",
-            "  source      Source   @relation(fields: [sourceId], references: [id])\n",
-            "  sourceId    Int\n",
-            "  location    Location @relation(fields: [locationId], references: [id])\n",
-            "  locationId  Int\n",
-            "}\n",
-            "```\n",
-            "---------------------------------\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "context = \"Designing the core schema for a Job Tracker application using Prisma ORM.\"\n",
+        "context = \"Generate a complete database schema using Prisma ORM for a PostgreSQL database. The application is a Job Tracker where each user has their own customizable settings.\"\n",
         "question = \"\"\"\n",
-        "Generate two Prisma models:\n",
-        "1. A `User` model with an `id` and `email`, which will have relationships to applications, statuses, sources, and locations.\n",
-        "2. An `Application` model which is the main table. It must include `id`, `company_name`, `position_applied`, `application_date`, `interview_date`, and `notes`. This model must have relationships to User, Status, Source, and Location models.\n",
+        "Generate the complete code for a `schema.prisma` file. It must include the following models:\n",
+        "\n",
+        "1.  **User**:\n",
+        "    - `id` (String, cuid, primary key)\n",
+        "    - `email` (String, unique)\n",
+        "    - `password` (String)\n",
+        "    - `createdAt` (DateTime, default now)\n",
+        "    - It should have one-to-many relationships with all other models.\n",
+        "\n",
+        "2.  **Status**:\n",
+        "    - `id` (String, cuid, primary key)\n",
+        "    - `name` (String)\n",
+        "    - `color` (String, e.g., for hex color codes)\n",
+        "    - `userId` (String, relation to User model)\n",
+        "    - A `user` field for the relation.\n",
+        "\n",
+        "3.  **ApplicationSource**: (To track where the job was found, e.g., 'LinkedIn', 'JobStreet')\n",
+        "    - `id` (String, cuid, primary key)\n",
+        "    - `name` (String)\n",
+        "    - `userId` (String, relation to User model)\n",
+        "    - A `user` field for the relation.\n",
+        "\n",
+        "4.  **LocationType**: (e.g., 'On-site', 'Remote', 'Hybrid')\n",
+        "    - `id` (String, cuid, primary key)\n",
+        "    - `name` (String)\n",
+        "    - `color` (String)\n",
+        "    - `userId` (String, relation to User model)\n",
+        "    - A `user` field for the relation.\n",
+        "\n",
+        "5.  **Application**:\n",
+        "    - `id` (String, cuid, primary key)\n",
+        "    - `company_name` (String)\n",
+        "    - `position_applied` (String)\n",
+        "    - `application_date` (DateTime)\n",
+        "    - `interview_date` (DateTime, optional)\n",
+        "    - `notes` (String, optional)\n",
+        "    - `userId`, `statusId`, `sourceId`, `locationId` as foreign keys.\n",
+        "    - `user`, `status`, `source`, and `location` fields for the relations.\n",
+        "\n",
+        "Ensure all relationships between User and the other tables, and between Application and the other tables, are correctly defined.\n",
         "\"\"\"\n",
         "\n",
-        "# Menjalankan prompt\n",
-        "core_models = generate_prisma_schema(context, question)"
+        "prisma_schema_code = generate_code(context, question)"
       ]
     }
   ],
