Dibuat menggunakan Colab

--- a/sd_learn_cgo_lab1.ipynb
+++ b/sd_learn_cgo_lab1.ipynb
@@ -115,7 +115,7 @@
       "source": [
         "def generate_code(context, question):\n",
         "    prompt = f\"\"\"\n",
-        "As an expert full-stack developer with 15 years of experience specializing in Next.js and prisma, your task is to generate production-ready code.\n",
+        "As an expert full-stack developer with 15 years of experience specializing in Next.js and express js, your task is to generate production-ready code.\n",
         "\n",
         "Context: {context}\n",
         "Task: {question}\n",
@@ -129,11 +129,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "f-o9FFvbOQQJ"
+        "id": "f-o9FFvbOQQJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fa8307f-4783-4e20-fc75-5a9ca706e7e0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Hasil Kode dari IBM Granite ---\n",
+            "```prisma\n",
+            "generator client {\n",
+            "  provider = \"prisma-client-js\"\n",
+            "}\n",
+            "\n",
+            "datasource db {\n",
+            "  provider = \"postgresql\"\n",
+            "  url      = env(\"DATABASE_URL\")\n",
+            "}\n",
+            "\n",
+            "model User {\n",
+            "  id          String   @id(slug: \"{email}\") @db.VarChar(255)\n",
+            "  email       String   @unique\n",
+            "  password    String\n",
+            "  createdAt   DateTime @default(now())\n",
+            "\n",
+            "  applications Application[]\n",
+            "  statuses     Status[]\n",
+            "  sources      ApplicationSource[]\n",
+            "  locationTypes LocationType[]\n",
+            "}\n",
+            "\n",
+            "model Status {\n",
+            "  id        String   @id(slug: \"{name}\") @db.VarChar(255)\n",
+            "  name      String\n",
+            "  color     String\n",
+            "  userId    String   @db.VarChar(255)\n",
+            "  user      User     @relation(fields: [userId], references: [id])\n",
+            "}\n",
+            "\n",
+            "model ApplicationSource {\n",
+            "  id        String   @id(slug: \"{name}\") @db.VarChar(255)\n",
+            "  name      String\n",
+            "  userId    String   @db.VarChar(255)\n",
+            "  user      User     @relation(fields: [userId], references: [id])\n",
+            "}\n",
+            "\n",
+            "model LocationType {\n",
+            "  id        String   @id(slug: \"{name}\") @db.VarChar(255)\n",
+            "  name      String\n",
+            "  color     String\n",
+            "  userId    String   @db.VarChar(255)\n",
+            "  user      User     @relation(fields: [userId], references: [id])\n",
+            "}\n",
+            "\n",
+            "model Application {\n",
+            "  id          String   @id(slug: \"{company_name}-{position_applied}-{application_date}\") @db.VarChar(255)\n",
+            "  company_name String\n",
+            "  position_applied String\n",
+            "  application_date DateTime\n",
+            "  interview_date DateTime\n",
+            "  notes       String?\n",
+            "  userId      String   @db.VarChar(255)\n",
+            "  statusId    String   @db.VarChar(255)\n",
+            "  sourceId    String   @db.VarChar(255)\n",
+            "  locationId  String   @db.VarChar(255)\n",
+            "\n",
+            "  user          User     @relation(fields: [userId], references: [id])\n",
+            "  status        Status   @relation(fields: [statusId], references: [id])\n",
+            "  source        ApplicationSource   @relation(fields: [sourceId], references: [id])\n",
+            "  location      LocationType   @relation(fields: [locationId], references: [id])\n",
+            "}\n",
+            "```\n",
+            "---------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "context = \"Generate a complete database schema using Prisma ORM for a PostgreSQL database. The application is a Job Tracker where each user has their own customizable settings.\"\n",
         "question = \"\"\"\n",
